Remove Double constructor uses
Using Double constructor is deprecated since Java 9